--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,1 +1,16 @@
 /* pages/classic/classic.wxss */
+.chunk{
+    width:100px;
+    height:100px;
+}
+.color1{
+    background-color: brown;
+}
+
+.color2{
+    background-color: aqua;
+}
+
+.color3{
+    background-color: blue;
+}
