git commit -m"项目正式开启前的学习"

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,4 +1,5 @@
-<view class="color1 chunk"/>
-<view class="color2 chunk"/>
-<view class="color3 chunk"/>
-
+<view class="container">
+    <view class="color1 chunk">1</view>
+    <view class="color2 chunk">2</view>
+    <view class="color3 chunk">3</view>
+</view>
